--- a/src/fxml/LaLiga.fxml
+++ b/src/fxml/LaLiga.fxml
@@ -1,85 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<!--
- * Copyright (c) 2011, 2013 Oracle and/or its affiliates.
- * All rights reserved. Use is subject to license terms.
- *
- * This file is available and licensed under the following license:
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- *
- *  - Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- *  - Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in
- *    the documentation and/or other materials provided with the distribution.
- *  - Neither the name of Oracle Corporation nor the names of its
- *    contributors may be used to endorse or promote products derived
- *    from this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
- * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
- * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
- * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
- * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
-
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="341.0" prefWidth="403.0" styleClass="root" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.FXMLController">
-  <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
-  
-  <Text id="welcome-text" text="La LIGA" wrappingWidth="149.703125" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-  
-  <Label text="Usuario:" GridPane.rowIndex="2" />
-  
-  <TextField fx:id="root" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-  
-  <Label text="Clave:" GridPane.rowIndex="3" />
-  
-  <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-  
-  <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
-      <Button onAction="#handleSubmitButtonAction" prefHeight="23.0" prefWidth="67.0" text="Login" />
-  </HBox>
-  
-  <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-  
-  <stylesheets>
-    <URL value="@Login.css" />
-  </stylesheets>
-   <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
-  
-</GridPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.FXMLController">
+   <children>
+      <Button onAction="#clasificacion"  fx:id="bt_clasificacion" layoutX="258.0" layoutY="271.0" mnemonicParsing="false" text="Clasificación" />
+      <Label layoutX="14.0" layoutY="14.0" prefHeight="39.0" prefWidth="407.0" text="Liga Española (Primera División)" textFill="#e40e0e">
+         <font>
+            <Font size="27.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="miCombo" layoutX="14.0" layoutY="96.0" onAction="#cargaJugadoresEquipo" prefWidth="150.0" />
+      <ListView fx:id="lv_jugadores" layoutX="386.0" layoutY="96.0" prefHeight="200.0" prefWidth="200.0" />
+      <ImageView fx:id="iv_estadio" fitHeight="150.0" fitWidth="200.0" layoutX="174.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="486.0" layoutY="25.0" prefHeight="18.0" prefWidth="88.0" text="2018-19" />
+   </children>
+</AnchorPane>
